feat: included find player by id use case