@@ -4,14 +4,15 @@ import es.ucm.luisegui.dunktomic.infrastructure.database.models.ImageEntity;
 import es.ucm.luisegui.dunktomic.infrastructure.database.models.PlayerEntity;
 import lombok.AllArgsConstructor;
 import lombok.Data;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 import org.springframework.jdbc.core.simple.JdbcClient;
 import org.springframework.stereotype.Component;
-import java.sql.Array;
 import java.sql.ResultSet;
 import java.sql.SQLException;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
@@ -24,18 +25,14 @@ import es.ucm.luisegui.dunktomic.domain.valueobjects.CourtPositions;
 @AllArgsConstructor
 public class PlayerDbAdapter
 {
+    private static final Logger log = LoggerFactory.getLogger(PlayerDbAdapter.class);
     private final NamedParameterJdbcTemplate jdbcTemplate;
     private final JdbcClient jdbcClient;
 
-    private static Set<String> castPositions(Array positions) {
+    private static Set<String> castPositions(String positions) {
         if (positions == null)
             return new HashSet<>();
-        try {
-            String[] array = (String[]) positions.getArray();
-            return new HashSet<>(Arrays.asList(array));
-        } catch (SQLException e) {
-            return new HashSet<>();
-        }
+        return new HashSet<>(List.of(positions.split(",")));
     }
 
     private static PlayerEntity mapRow(ResultSet rs, int rowNum) throws SQLException {
@@ -44,8 +41,8 @@ public class PlayerDbAdapter
             rs.getString(PlayerEntity.Field.EMAIL),
             rs.getString(PlayerEntity.Field.NAME),
             rs.getString(PlayerEntity.Field.ROLE),
-            new ImageEntity(UUID.fromString(rs.getString(ImageEntity.Field.ID)), rs.getString(ImageEntity.Field.PATH), rs.getString(ImageEntity.Field.MIME_TYPE)),
-            castPositions(rs.getArray(PlayerEntity.Field.COURT_POSITIONS)),
+            new ImageEntity(UUID.fromString(rs.getString("user_image_id")), rs.getString(ImageEntity.Field.PATH), rs.getString(ImageEntity.Field.MIME_TYPE)),
+            castPositions(rs.getString(PlayerEntity.Field.COURT_POSITIONS)),
             rs.getFloat(PlayerEntity.Field.LEVEL)
         );
     }
@@ -53,14 +50,14 @@ public class PlayerDbAdapter
     public Optional<PlayerEntity> find(UUID id) {
         return jdbcClient
             .sql("select " +
-                "u.id, u.email, u.role, p.positions_on_court, p.level, i.path, i.mime_type " +
+                "u.id, u.email, u.name, u.role, p.positions_on_court, p.level, i.id as user_image_id, i.path, i.mime_type " +
                 "from User u " +
                 "left join Player p on " +
                 "u.email = p.email " +
                 "left join Image i on " +
                 "u.user_image = i.id " +
-                "where u.id = :identifier")
-            .param("identifier", id.toString())
+                "where u.id = ?")
+            .param(id.toString())
             .query(PlayerDbAdapter::mapRow)
             .optional();
     }
